# Hw_web_7

./: alembic.ini  config.ini  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 7bd9e78090e2_init.py
conf/: models.py
